# alsa-switch

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  alsa-stream.c  alsa-stream.sh  alsa-switch-config.h.in  alsa-switch.c  alsa_util.c  alsa_util.h  config.h.in  configure  configure.in  system_util.c  system_util.h  util.c  util.h
